--- a/board/samsung/eins2440/Makefile
+++ b/board/samsung/eins2440/Makefile
@@ -1,9 +1,9 @@
 #
 # (C) Copyright 2000-2006
-# Wolfgang Denk, DENX Software Engineering, wd@denx.de.
+# madeinchaos <https://github.com/madeinchaos>
 #
 # SPDX-License-Identifier:	GPL-2.0+
 #
 
-obj-y	:= smdk2410.o
+obj-y	:= eins2440.o
 obj-y	+= lowlevel_init.o
