--- a/board/samsung/eins2440/Kconfig
+++ b/board/samsung/eins2440/Kconfig
@@ -1,7 +1,7 @@
-if TARGET_SMDK2410
+if TARGET_EINS2440
 
 config SYS_BOARD
-	default "smdk2410"
+	default "eins2440"
 
 config SYS_VENDOR
 	default "samsung"
@@ -10,6 +10,6 @@ config SYS_SOC
 	default "s3c24x0"
 
 config SYS_CONFIG_NAME
-	default "smdk2410"
+	default "eins2440"
 
 endif
