--- a/configs/eins2440_defconfig
+++ b/configs/eins2440_defconfig
@@ -3,7 +3,7 @@ CONFIG_TARGET_EINS2440=y
 # CONFIG_SYS_STDIO_DEREGISTER is not set
 # CONFIG_DISPLAY_BOARDINFO is not set
 CONFIG_HUSH_PARSER=y
-CONFIG_SYS_PROMPT="EINS2440 # "
+CONFIG_SYS_PROMPT="# "
 CONFIG_CMD_USB=y
 # CONFIG_CMD_SETEXPR is not set
 CONFIG_CMD_DHCP=y
